--- a/template/stdmConfig.xml
+++ b/template/stdmConfig.xml
@@ -9,6 +9,8 @@
 				<column fullname="address id" name="address" null="yes" size="25" type="character varying" />
 				<column fullname="identity" name="identification" null="yes" oldname="unique_id" size="" type="integer" />
 				<column fullname="mobile" name="contact_telephone" null="yes" size="25" type="character varying" />
+				<column fullname="" name="age" null="yes" size="" type="integer" />
+				<column fullname="" lookup="check_gender" name="gender" null="yes" size="25" type="character varying" />
 			</columns>
 			<relations />
 			<constraints />
@@ -25,7 +27,7 @@
 				<column fullname="unique identifier" name="spatial_unit_id" null="yes" size="" type="integer" />
 				<column fullname="Friendly name of the unit" name="name" null="yes" size="25" type="character varying" />
 				<column fullname="type of the unit" lookup="check_type" name="type" null="yes" size="25" type="character varying" />
-			</columns>
+			<column fullname="" name="area" null="yes" size="" type="double precision" /></columns>
 			<relations>
 			</relations>
 			<constraints>
@@ -48,9 +50,11 @@
 				<column fullname="id of the spatial unit relating to the document" name="spatial_unit" null="yes" size="" type="integer" />
 				<column fullname="when it was obtained" name="date_of_recording" null="yes" size="" type="date" />
 				<column fullname="For how long" name="validity" null="yes" size="" type="date" />
-			<column fullname="" name="filename" null="yes" size="25" type="character varying" /><column fullname="" name="document_id" null="yes" size="25" type="character varying" /></columns>
+				<column fullname="" name="filename" null="yes" size="25" type="character varying" />
+				<column fullname="" name="document_id" null="yes" size="25" type="character varying" />
+			</columns>
 			<relations>
-			</relations>
+			<relation column="id" fk="spatial_unit" name="spid" ondelete="cascade" onupdate="cascade" table="spatial_unit" /><relation column="id" fk="party" name="party" ondelete="cascade" onupdate="cascade" table="party" /></relations>
 			<constraints />
 			<contentgroups fullname="Prove of evidence to the defined tenure" name="supporting_document">
 				<contentgroup code="{A6FCF613-5442-40BF-96A9-F9BADC6BA647}" name="create" />
@@ -68,9 +72,7 @@
 				<column fullname="spatial unit id" name="spatial_unit" null="yes" size="" type="integer" />
 			</columns>
 			<relations>
-				<relation column="id" fk="party" name="partyid" ondelete="cascade" onupdate="cascade" table="party" />
-				<relation column="id" fk="spatial_unit" name="spid" ondelete="cascade" onupdate="cascade" table="spatial_unit" />
-			</relations>
+				<relation column="id" fk="spatial_unit" name="pid1" ondelete="cascade" onupdate="cascade" table="spatial_unit" /><relation column="id" fk="party" name="partyid" ondelete="cascade" onupdate="cascade" table="party" /></relations>
 			<constraints />
 			<contentgroups fullname="Relation of the person to spatial unit as supported by supporting documents" name="social_tenure_relationship">
 				<contentgroup code="{A30E6D14-1110-4847-BC2E-095888AF08EA}" name="create" />
@@ -117,5 +119,54 @@
 				<value>Others</value>
 			</data>
 		</lookup>
-	<table fullname="household entity" name="household"><columns><column fullname="Primary Key" key="1" name="id" size="" type="serial" /><column fullname="code number" name="household_code" null="yes" size="25" type="character varying" /><column fullname="family persons" name="total_members" null="yes" size="25" type="character varying" /><column fullname="" lookup="check_previous_residence" name="previous_residence" null="yes" size="25" type="character varying" /></columns><relations /><constraints /><contentgroups fullname="household entity" name="household"><contentgroup code="{7AEA6E3D-6EB9-40F5-B55D-8E9DF99EEDDB}" name="create" /><contentgroup code="{214B33F2-9277-4F21-9795-7DD3E8D46194}" name="select" /><contentgroup code="{B6A4B8E9-36E4-4C17-85A3-37559A236444}" name="update" /><contentgroup code="{EE2C3CE2-9BA5-4A9D-A805-8B3C2DEC3C74}" name="delete" /></contentgroups></table><lookup fullname="" name="check_previous_residence"><columns><column fullname="Primary Key" key="1" name="id" size="" type="serial" /><column fullname="Choice list" name="value" size="50" type="character varying" /></columns><data><value>Here</value><value>Another town</value><value>Another settlement</value></data></lookup></profile>
+		<table fullname="household entity" name="household">
+			<columns>
+				<column fullname="Primary Key" key="1" name="id" size="" type="serial" />
+				<column fullname="code number" name="household_code" null="yes" size="25" type="character varying" />
+				<column fullname="family persons" name="total_members" null="yes" size="25" type="character varying" />
+				<column fullname="" lookup="check_previous_residence" name="previous_residence" null="yes" size="25" type="character varying" />
+				<column fullname="" lookup="check_settlement_reason" name="reason_for_settling_here" null="yes" size="25" type="character varying" />
+			<column fullname="" lookup="check_montly_income" name="monthly_income" null="yes" size="25" type="character varying" /></columns>
+			<relations />
+			<constraints />
+			<contentgroups fullname="household entity" name="household">
+				<contentgroup code="{7AEA6E3D-6EB9-40F5-B55D-8E9DF99EEDDB}" name="create" />
+				<contentgroup code="{214B33F2-9277-4F21-9795-7DD3E8D46194}" name="select" />
+				<contentgroup code="{B6A4B8E9-36E4-4C17-85A3-37559A236444}" name="update" />
+				<contentgroup code="{EE2C3CE2-9BA5-4A9D-A805-8B3C2DEC3C74}" name="delete" />
+			</contentgroups>
+		</table>
+		<lookup fullname="" name="check_previous_residence">
+			<columns>
+				<column fullname="Primary Key" key="1" name="id" size="" type="serial" />
+				<column fullname="Choice list" name="value" size="50" type="character varying" />
+			</columns>
+			<data>
+				<value>Here</value>
+				<value>Another town</value>
+				<value>Another settlement</value>
+			</data>
+		</lookup>
+		<lookup fullname="" name="check_gender">
+			<columns>
+				<column fullname="Primary Key" key="1" name="id" size="" type="serial" />
+				<column fullname="Choice list" name="value" size="50" type="character varying" />
+			</columns>
+			<data>
+				<value>Male</value>
+				<value>Female</value>
+			</data>
+		</lookup>
+		<lookup fullname="" name="check_settlement_reason">
+			<columns>
+				<column fullname="Primary Key" key="1" name="id" size="" type="serial" />
+				<column fullname="Choice list" name="value" size="50" type="character varying" />
+			</columns>
+			<data>
+				<value>Eviction</value>
+				<value>Poverty</value>
+				<value>Job opportunity</value>
+			</data>
+		</lookup>
+	<lookup fullname="" name="check_montly_income"><columns><column fullname="Primary Key" key="1" name="id" size="" type="serial" /><column fullname="Choice list" name="value" size="50" type="character varying" /></columns><data><value>below 1000</value><value>1001-2500</value><value>2501-5000</value><value>5000-10000</value><value>10000-20000</value><value>Above 20000</value></data></lookup></profile>
 </schema>
